--- a/admin/docker-compose.yml
+++ b/admin/docker-compose.yml
@@ -8,3 +8,16 @@ services:
       - 8000:8000
     volumes:
       - .:/pyweb-app
+
+  db:
+    image: mysql:5.7.39
+    restart: always
+    environment:
+      MYSQL_DATABASE: admin
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: root
+    volumes:
+      - .dbdata:/var/lib/mysql
+    ports:
+      - 33066:3306
