--- a/admin/docker-compose.yml
+++ b/admin/docker-compose.yml
@@ -13,11 +13,11 @@ services:
     image: mysql:5.7.39
     restart: always
     environment:
-      MYSQL_DATABASE: admin
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: 'admin'
+      MYSQL_USER: 'admin'
+      MYSQL_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'root'
     volumes:
       - .dbdata:/var/lib/mysql
     ports:
-      - 33066:3306
+      - 3306:3306
